force-app/main/default/objects/bvd_connector__Matching_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>bvd_connector__BvD_Field__c</fullName>
        <label>BvD Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Object__c</fullName>
        <description>Account/Contact/Lead</description>
        <inlineHelpText>Account/Contact/Lead</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__SF_Field__c</fullName>
        <label>SF Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Matching Mapping</label>
</CustomObject>